--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,21 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/cjs",
-    "module": "esnext",
-    "target": "es5",
+    "outDir": "./dist/esm",
+    "module": "ES2020",
+    "target": "ES2020",
     "types": ["node", "jest"],
-    "lib": ["es6", "dom", "es2016", "es2017"],
-    "jsx": "react",
+    "allowJs": false,
     "declaration": true,
-    "declarationDir": "./dist",
+    "declarationDir": "./dist/types",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "allowImportingTsExtensions": false, //set true to run jest
+    "allowImportingTsExtensions": false,
     "noImplicitAny": false,
     "esModuleInterop": true,
-    "noEmit": false, //set true to run jest
+    "noEmit": false,
   },
   "include": [
     "src/rx"
   ],
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "dist"]
 }
-
